<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_size"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOne"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        tools:text="@string/box_one"
        android:onClick="onClickBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boxTwo"
        style="@style/whiteBox"
        android:layout_width="@dimen/layout_weight"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_size"
        tools:text="@string/box_two"
        android:onClick="onClickBox"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideLine"
        app:layout_constraintStart_toStartOf="@id/boxOne"
        app:layout_constraintTop_toBottomOf="@+id/boxOne" />

    <TextView
        android:id="@+id/boxThree"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_size"
        android:layout_marginTop="@dimen/default_size"
        android:layout_marginBottom="@dimen/default_size"
        tools:text="@string/box_three"
        android:onClick="onClickBox"
        app:layout_constraintBottom_toTopOf="@+id/boxFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxOne"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/boxFour"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_size"
        android:layout_marginBottom="@dimen/default_size"
        tools:text="@string/box_four"
        android:onClick="onClickBox"
        app:layout_constraintBottom_toTopOf="@+id/boxFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxThree" />

    <TextView
        android:id="@+id/boxFive"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_size"
        tools:text="@string/box_five"
        android:onClick="onClickBox"
        app:layout_constraintBottom_toTopOf="@+id/guideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxFour" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/yellow"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greenButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/redButton" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/red"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yellowButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/green"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yellowButton" />

</androidx.constraintlayout.widget.ConstraintLayout>